# parallel-parser

./: Cargo.toml  design.md
benches/: my_benchmark.rs
data/jsonchecker/adversarial/issue150/: 100.json  1001.json  1003.json  1004.json  1007.json  1008.json  1018.json  1020.json  1023.json  1029.json  103.json  1031.json  1032.json  1036.json  1039.json  104.json  1041.json  1044.json  1049.json  105.json  1052.json  1056.json  1057.json  1058.json  106.json  1065.json  1066.json  107.json  1072.json  1076.json  1078.json  1079.json  1080.json  1081.json  1083.json  1086.json  1090.json  1092.json  1094.json  1099.json  (+699 more)
src/: bitmask.rs  carryless_mul.rs  int_traits.rs  lib.rs  maskable.rs  parser.rs  parser512.rs  parser64.rs  region_prefix_xor.rs  separated_bits.rs  simd_int.rs  simd_traits.rs  streamable_bitmask.rs  tests.rs
src/bitmask/: carryless_mul.rs  int_traits.rs  maskable.rs  mod.rs  separated_bits.rs  simd_traits.rs  streamable_bitmask.rs
src/json_parser/: mod.rs  parser.rs  result.rs
src/parser/: find_strings.rs  tests.rs
tests/: jsonchecker.rs
