[package]
name = "parallel-parser"
version = "0.1.0"
authors = ["John Keiser <john@johnkeiser.com>"]
edition = "2018"

[dependencies]
packed_simd = { version = "*", features = [ "into_bits" ] }
num = "*"
strum = "*"
strum_macros = "*"

[dev-dependencies]
pretty_assertions = "*"
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
